--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
 <body>
     <h1>hola</h1>
     <!--comentario-->
+    <h3>Modificación para la nueva versión</h3>
+    <ul>
+        <li>
+            a
+        </li>
+        <li>
+            b
+        </li>
+    </ul>
 </body>
 </html>
