commit desde visual

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
             b
         </li>
     </ul>
-    <h1>Escrito con la rama HTML<h1>
-    <h3>Conflicto</h3>
-    <p>Conflicto</p>
+    <p>Prueba</p>
 </body>
 </html>
