Añadida otra línea de encabezado

--- a/index.html
+++ b/index.html
@@ -8,19 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>hola</h1>
-    <!--comentario-->
-    <h3>Modificación para la nueva versión</h3>
-    <ul>
-        <li>
-            a
-        </li>
-        <li>
-            b
-        </li>
-    </ul>
     <p>Prueba</p>
     <h1>Línea de encabezado</h1>
     <h2>Línea de encabezado nvl2</h2>
+    <h3>Otra línea de encabezado</h3>
 </body>
 </html>
